test/express/layers/invalid/views/IndexView.js
module.exports = {
    render: function(req, res, result) {
        res.render("index.jade", {
            locals: {
                title: "Index",
                result: result
            }
        });
    }
};